# nginx-lint

./: .gitignore  .travis.yml  LICENSE  Makefile  README.txt  nginx-lint.cabal  test.conf
NginxLint/: Data.hs  Hint.hs  Main.hs  Parse.hs
test/: Main.hs
