name:                nginx-lint
version:             0.1
synopsis:            Nginx config verification tool (linter).
-- description:
homepage:            https://github.com/temoto/nginx-lint
bug-reports:         https://github.com/temoto/nginx-lint/issues
license:             MIT
license-file:        LICENSE
author:              Sergey Shepelev
maintainer:          temotor@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.txt test.conf

source-repository head
  type:     git
  location: https://github.com/temoto/nginx-lint.git


executable nginx-lint
  default-language:  Haskell2010
  main-is:           NginxLint/Main.hs
  -- TODO: bisect compatible versions
  build-depends:     base (>= 4 && < 5),
                     parsec,
                     transformers,
                     uniplate

  ghc-options:       -Wall -O2 -fno-warn-missing-signatures


test-suite nginx-lint-test
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    ., test
  main-is:           Main.hs
  -- TODO: bisect compatible versions
  build-depends:     base (>= 4 && < 5),
                     HUnit,
                     parsec,
                     QuickCheck,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2,
                     uniplate
  other-modules:     NginxLint.Data, NginxLint.Parse

  ghc-options:       -Wall -O0 -fno-warn-missing-signatures
